--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-29 10:49 -->
+<!-- 2022-09-29 10:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -34,19 +34,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf3600b5">1. 暑假</a>
+<li><a href="#orgad80e3f">1. 暑假</a>
 <ul>
-<li><a href="#orgbab71a4">1.1. 夏令营</a></li>
+<li><a href="#org0dc7251">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgbbcc0a2">2. 打工</a></li>
-<li><a href="#org9a1acd1">3. 我的928</a>
+<li><a href="#orgb87ec92">2. 打工</a></li>
+<li><a href="#org9d62396">3. 我的928</a>
 <ul>
-<li><a href="#org41d2d45">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org0b2f5a0">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org5280831">4. 他们的928</a></li>
-<li><a href="#org648ac50">5. 总结</a></li>
+<li><a href="#orgc0ddf80">4. 他们的928</a></li>
+<li><a href="#org5940e74">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -56,7 +56,7 @@
 </p>
 
 
-<figure id="org27a6657">
+<figure id="org0d580ce">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -79,8 +79,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgf3600b5" class="outline-2">
-<h2 id="orgf3600b5"><span class="section-number-2">1.</span> <a href="#orgf3600b5">暑假</a></h2>
+<div id="outline-container-orgad80e3f" class="outline-2">
+<h2 id="orgad80e3f"><span class="section-number-2">1.</span> <a href="#orgad80e3f">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -104,8 +104,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgbab71a4" class="outline-3">
-<h3 id="orgbab71a4"><span class="section-number-3">1.1.</span> <a href="#orgbab71a4">夏令营</a></h3>
+<div id="outline-container-org0dc7251" class="outline-3">
+<h3 id="org0dc7251"><span class="section-number-3">1.1.</span> <a href="#org0dc7251">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -147,8 +147,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgbbcc0a2" class="outline-2">
-<h2 id="orgbbcc0a2"><span class="section-number-2">2.</span> <a href="#orgbbcc0a2">打工</a></h2>
+<div id="outline-container-orgb87ec92" class="outline-2">
+<h2 id="orgb87ec92"><span class="section-number-2">2.</span> <a href="#orgb87ec92">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -162,8 +162,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org9a1acd1" class="outline-2">
-<h2 id="org9a1acd1"><span class="section-number-2">3.</span> <a href="#org9a1acd1">我的928</a></h2>
+<div id="outline-container-org9d62396" class="outline-2">
+<h2 id="org9d62396"><span class="section-number-2">3.</span> <a href="#org9d62396">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -179,8 +179,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org41d2d45" class="outline-3">
-<h3 id="org41d2d45"><span class="section-number-3">3.1.</span> <a href="#org41d2d45">928演唱会(bushi</a></h3>
+<div id="outline-container-org0b2f5a0" class="outline-3">
+<h3 id="org0b2f5a0"><span class="section-number-3">3.1.</span> <a href="#org0b2f5a0">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -188,7 +188,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org4c22816">
+<figure id="org641af37">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgd15bf3a">
+<figure id="org1350f46">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -213,8 +213,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org5280831" class="outline-2">
-<h2 id="org5280831"><span class="section-number-2">4.</span> <a href="#org5280831">他们的928</a></h2>
+<div id="outline-container-orgc0ddf80" class="outline-2">
+<h2 id="orgc0ddf80"><span class="section-number-2">4.</span> <a href="#orgc0ddf80">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -234,8 +234,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org648ac50" class="outline-2">
-<h2 id="org648ac50"><span class="section-number-2">5.</span> <a href="#org648ac50">总结</a></h2>
+<div id="outline-container-org5940e74" class="outline-2">
+<h2 id="org5940e74"><span class="section-number-2">5.</span> <a href="#org5940e74">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -250,7 +250,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-29 10:49</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-29 10:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
