--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-29 16:12 -->
+<!-- 2022-09-29 19:36 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,42 +33,42 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org151213e">1. 妙妙文章</a>
+<li><a href="#org02ccbda">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgb61ddea">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org201323f">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgb194236">1.3. 关于编辑器</a></li>
-<li><a href="#org28ff26e">1.4. 关于代码</a></li>
-<li><a href="#org8354b4e">1.5. 关于CPU</a>
+<li><a href="#orgae27513">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgafe3dbd">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org6223161">1.3. 关于编辑器</a></li>
+<li><a href="#org7354aba">1.4. 关于代码</a></li>
+<li><a href="#org2d1bafc">1.5. 关于CPU</a>
 <ul>
-<li><a href="#org926a936">1.5.1. Lisp</a></li>
+<li><a href="#orgb0747f4">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org944fc22">1.6. 关于算法</a>
+<li><a href="#orgbf5b112">1.6. 关于算法</a>
 <ul>
-<li><a href="#org51b5f20">1.6.1. 关于随机</a></li>
+<li><a href="#org88f2495">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org10c5f20">1.7. 关于AI</a></li>
-<li><a href="#orgcb49898">1.8. 关于软件</a>
+<li><a href="#org532f3ad">1.7. 关于AI</a></li>
+<li><a href="#org67c86a4">1.8. 关于软件</a>
 <ul>
-<li><a href="#org12c3e98">1.8.1. SQLite</a></li>
+<li><a href="#orgb3411fe">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orged50e02">1.9. 关于workflow</a></li>
+<li><a href="#org99f0c16">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org8839cb5">2. 棒棒视频</a>
+<li><a href="#org0ec9ff7">2. 棒棒视频</a>
 <ul>
-<li><a href="#org28ea488">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org1c1e494">2.2. 各种剧</a></li>
-<li><a href="#orgc353b48">2.3. 电影</a></li>
+<li><a href="#orge1278c4">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org194441c">2.2. 各种剧</a></li>
+<li><a href="#orgf747b19">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orge230df3">3. 快乐游戏</a></li>
-<li><a href="#orgda83412">4. 宝藏博主</a></li>
-<li><a href="#org356dc22">5. 有意思的</a></li>
-<li><a href="#org5138ae6">6. 我想玩的</a></li>
+<li><a href="#org3c8546f">3. 快乐游戏</a></li>
+<li><a href="#org3a32f98">4. 宝藏博主</a></li>
+<li><a href="#org4361905">5. 有意思的</a></li>
+<li><a href="#org4a32f0a">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -77,8 +77,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org151213e" class="outline-2">
-<h2 id="org151213e"><span class="section-number-2">1.</span> <a href="#org151213e">妙妙文章</a></h2>
+<div id="outline-container-org02ccbda" class="outline-2">
+<h2 id="org02ccbda"><span class="section-number-2">1.</span> <a href="#org02ccbda">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -437,7 +437,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="orgbc41eaf">
+<figure id="org281a5dd">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -501,8 +501,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgb61ddea" class="outline-3">
-<h3 id="orgb61ddea"><span class="section-number-3">1.1.</span> <a href="#orgb61ddea">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgae27513" class="outline-3">
+<h3 id="orgae27513"><span class="section-number-3">1.1.</span> <a href="#orgae27513">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -532,8 +532,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org201323f" class="outline-3">
-<h3 id="org201323f"><span class="section-number-3">1.2.</span> <a href="#org201323f">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgafe3dbd" class="outline-3">
+<h3 id="orgafe3dbd"><span class="section-number-3">1.2.</span> <a href="#orgafe3dbd">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -567,8 +567,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgb194236" class="outline-3">
-<h3 id="orgb194236"><span class="section-number-3">1.3.</span> <a href="#orgb194236">关于编辑器</a></h3>
+<div id="outline-container-org6223161" class="outline-3">
+<h3 id="org6223161"><span class="section-number-3">1.3.</span> <a href="#org6223161">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org28ff26e" class="outline-3">
-<h3 id="org28ff26e"><span class="section-number-3">1.4.</span> <a href="#org28ff26e">关于代码</a></h3>
+<div id="outline-container-org7354aba" class="outline-3">
+<h3 id="org7354aba"><span class="section-number-3">1.4.</span> <a href="#org7354aba">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -611,8 +611,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org8354b4e" class="outline-3">
-<h3 id="org8354b4e"><span class="section-number-3">1.5.</span> <a href="#org8354b4e">关于CPU</a></h3>
+<div id="outline-container-org2d1bafc" class="outline-3">
+<h3 id="org2d1bafc"><span class="section-number-3">1.5.</span> <a href="#org2d1bafc">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -626,8 +626,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-org926a936" class="outline-4">
-<h4 id="org926a936"><span class="section-number-4">1.5.1.</span> <a href="#org926a936">Lisp</a></h4>
+<div id="outline-container-orgb0747f4" class="outline-4">
+<h4 id="orgb0747f4"><span class="section-number-4">1.5.1.</span> <a href="#orgb0747f4">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -650,8 +650,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org944fc22" class="outline-3">
-<h3 id="org944fc22"><span class="section-number-3">1.6.</span> <a href="#org944fc22">关于算法</a></h3>
+<div id="outline-container-orgbf5b112" class="outline-3">
+<h3 id="orgbf5b112"><span class="section-number-3">1.6.</span> <a href="#orgbf5b112">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -670,8 +670,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org51b5f20" class="outline-4">
-<h4 id="org51b5f20"><span class="section-number-4">1.6.1.</span> <a href="#org51b5f20">关于随机</a></h4>
+<div id="outline-container-org88f2495" class="outline-4">
+<h4 id="org88f2495"><span class="section-number-4">1.6.1.</span> <a href="#org88f2495">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -685,8 +685,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org10c5f20" class="outline-3">
-<h3 id="org10c5f20"><span class="section-number-3">1.7.</span> <a href="#org10c5f20">关于AI</a></h3>
+<div id="outline-container-org532f3ad" class="outline-3">
+<h3 id="org532f3ad"><span class="section-number-3">1.7.</span> <a href="#org532f3ad">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -696,8 +696,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcb49898" class="outline-3">
-<h3 id="orgcb49898"><span class="section-number-3">1.8.</span> <a href="#orgcb49898">关于软件</a></h3>
+<div id="outline-container-org67c86a4" class="outline-3">
+<h3 id="org67c86a4"><span class="section-number-3">1.8.</span> <a href="#org67c86a4">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -708,8 +708,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org12c3e98" class="outline-4">
-<h4 id="org12c3e98"><span class="section-number-4">1.8.1.</span> <a href="#org12c3e98">SQLite</a></h4>
+<div id="outline-container-orgb3411fe" class="outline-4">
+<h4 id="orgb3411fe"><span class="section-number-4">1.8.1.</span> <a href="#orgb3411fe">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orged50e02" class="outline-3">
-<h3 id="orged50e02"><span class="section-number-3">1.9.</span> <a href="#orged50e02">关于workflow</a></h3>
+<div id="outline-container-org99f0c16" class="outline-3">
+<h3 id="org99f0c16"><span class="section-number-3">1.9.</span> <a href="#org99f0c16">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org8839cb5" class="outline-2">
-<h2 id="org8839cb5"><span class="section-number-2">2.</span> <a href="#org8839cb5">棒棒视频</a></h2>
+<div id="outline-container-org0ec9ff7" class="outline-2">
+<h2 id="org0ec9ff7"><span class="section-number-2">2.</span> <a href="#org0ec9ff7">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +805,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org28ea488" class="outline-3">
-<h3 id="org28ea488"><span class="section-number-3">2.1.</span> <a href="#org28ea488">Veritasium 真理元素</a></h3>
+<div id="outline-container-orge1278c4" class="outline-3">
+<h3 id="orge1278c4"><span class="section-number-3">2.1.</span> <a href="#orge1278c4">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +831,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1c1e494" class="outline-3">
-<h3 id="org1c1e494"><span class="section-number-3">2.2.</span> <a href="#org1c1e494">各种剧</a></h3>
+<div id="outline-container-org194441c" class="outline-3">
+<h3 id="org194441c"><span class="section-number-3">2.2.</span> <a href="#org194441c">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc353b48" class="outline-3">
-<h3 id="orgc353b48"><span class="section-number-3">2.3.</span> <a href="#orgc353b48">电影</a></h3>
+<div id="outline-container-orgf747b19" class="outline-3">
+<h3 id="orgf747b19"><span class="section-number-3">2.3.</span> <a href="#orgf747b19">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -879,8 +879,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orge230df3" class="outline-2">
-<h2 id="orge230df3"><span class="section-number-2">3.</span> <a href="#orge230df3">快乐游戏</a></h2>
+<div id="outline-container-org3c8546f" class="outline-2">
+<h2 id="org3c8546f"><span class="section-number-2">3.</span> <a href="#org3c8546f">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -909,8 +909,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgda83412" class="outline-2">
-<h2 id="orgda83412"><span class="section-number-2">4.</span> <a href="#orgda83412">宝藏博主</a></h2>
+<div id="outline-container-org3a32f98" class="outline-2">
+<h2 id="org3a32f98"><span class="section-number-2">4.</span> <a href="#org3a32f98">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -922,15 +922,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="org5a82b5f">
+<figure id="org6976794">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-org356dc22" class="outline-2">
-<h2 id="org356dc22"><span class="section-number-2">5.</span> <a href="#org356dc22">有意思的</a></h2>
+<div id="outline-container-org4361905" class="outline-2">
+<h2 id="org4361905"><span class="section-number-2">5.</span> <a href="#org4361905">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -957,8 +957,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org5138ae6" class="outline-2">
-<h2 id="org5138ae6"><span class="section-number-2">6.</span> <a href="#org5138ae6">我想玩的</a></h2>
+<div id="outline-container-org4a32f0a" class="outline-2">
+<h2 id="org4a32f0a"><span class="section-number-2">6.</span> <a href="#org4a32f0a">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -981,7 +981,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-28 16:22</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-29 16:12</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-29 19:36</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
