Update from https://github.com/thebesttv/eserver-static/commit/3b381a1dfca182e8fde9a46bb823b81acb9d73e3

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-29 19:36 -->
+<!-- 2022-09-30 02:58 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -34,19 +34,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb2a021c">1. 暑假</a>
+<li><a href="#orgae8de94">1. 暑假</a>
 <ul>
-<li><a href="#org13dc614">1.1. 夏令营</a></li>
+<li><a href="#orgd1640a5">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org995ec08">2. 打工</a></li>
-<li><a href="#org91c8089">3. 我的928</a>
+<li><a href="#orgdd2f446">2. 打工</a></li>
+<li><a href="#org3813bf3">3. 我的928</a>
 <ul>
-<li><a href="#orgae79744">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org637df27">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org654f903">4. 他们的928</a></li>
-<li><a href="#org22c70df">5. 总结</a></li>
+<li><a href="#orgd1592be">4. 他们的928</a></li>
+<li><a href="#org466dd86">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -56,7 +56,7 @@
 </p>
 
 
-<figure id="org1a4fd4d">
+<figure id="org17a4c90">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -79,8 +79,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgb2a021c" class="outline-2">
-<h2 id="orgb2a021c"><span class="section-number-2">1.</span> <a href="#orgb2a021c">暑假</a></h2>
+<div id="outline-container-orgae8de94" class="outline-2">
+<h2 id="orgae8de94"><span class="section-number-2">1.</span> <a href="#orgae8de94">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -104,8 +104,8 @@
 </p>
 </div>
 
-<div id="outline-container-org13dc614" class="outline-3">
-<h3 id="org13dc614"><span class="section-number-3">1.1.</span> <a href="#org13dc614">夏令营</a></h3>
+<div id="outline-container-orgd1640a5" class="outline-3">
+<h3 id="orgd1640a5"><span class="section-number-3">1.1.</span> <a href="#orgd1640a5">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -147,8 +147,8 @@
 </div>
 </div>
 
-<div id="outline-container-org995ec08" class="outline-2">
-<h2 id="org995ec08"><span class="section-number-2">2.</span> <a href="#org995ec08">打工</a></h2>
+<div id="outline-container-orgdd2f446" class="outline-2">
+<h2 id="orgdd2f446"><span class="section-number-2">2.</span> <a href="#orgdd2f446">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -162,8 +162,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org91c8089" class="outline-2">
-<h2 id="org91c8089"><span class="section-number-2">3.</span> <a href="#org91c8089">我的928</a></h2>
+<div id="outline-container-org3813bf3" class="outline-2">
+<h2 id="org3813bf3"><span class="section-number-2">3.</span> <a href="#org3813bf3">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -179,8 +179,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgae79744" class="outline-3">
-<h3 id="orgae79744"><span class="section-number-3">3.1.</span> <a href="#orgae79744">928演唱会(bushi</a></h3>
+<div id="outline-container-org637df27" class="outline-3">
+<h3 id="org637df27"><span class="section-number-3">3.1.</span> <a href="#org637df27">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -188,7 +188,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org187e378">
+<figure id="orgf1ad6c1">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org50100da">
+<figure id="org17e0e4b">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -213,8 +213,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org654f903" class="outline-2">
-<h2 id="org654f903"><span class="section-number-2">4.</span> <a href="#org654f903">他们的928</a></h2>
+<div id="outline-container-orgd1592be" class="outline-2">
+<h2 id="orgd1592be"><span class="section-number-2">4.</span> <a href="#orgd1592be">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -234,8 +234,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org22c70df" class="outline-2">
-<h2 id="org22c70df"><span class="section-number-2">5.</span> <a href="#org22c70df">总结</a></h2>
+<div id="outline-container-org466dd86" class="outline-2">
+<h2 id="org466dd86"><span class="section-number-2">5.</span> <a href="#org466dd86">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -250,7 +250,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-29 19:36</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 02:58</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
