Update from https://github.com/thebesttv/eserver-static/commit/0daaaeabebeb7b98176de33027878b81f74022c1

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-30 02:58 -->
+<!-- 2022-09-30 08:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,42 +33,42 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9ec3b5e">1. 妙妙文章</a>
+<li><a href="#org4a2021f">1. 妙妙文章</a>
 <ul>
-<li><a href="#org8165b6e">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org17989dd">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org2c1ced1">1.3. 关于编辑器</a></li>
-<li><a href="#orgcd4912f">1.4. 关于代码</a></li>
-<li><a href="#orgb0e498e">1.5. 关于CPU</a>
+<li><a href="#org0ed5efb">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org4ff45ed">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orge179212">1.3. 关于编辑器</a></li>
+<li><a href="#orge163824">1.4. 关于代码</a></li>
+<li><a href="#org3a77039">1.5. 关于CPU</a>
 <ul>
-<li><a href="#org3d4c981">1.5.1. Lisp</a></li>
+<li><a href="#org0ea6579">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgbc8083c">1.6. 关于算法</a>
+<li><a href="#orgeace410">1.6. 关于算法</a>
 <ul>
-<li><a href="#org085ee5f">1.6.1. 关于随机</a></li>
+<li><a href="#org7b9e839">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org8038c6b">1.7. 关于AI</a></li>
-<li><a href="#org416ed88">1.8. 关于软件</a>
+<li><a href="#org4028f97">1.7. 关于AI</a></li>
+<li><a href="#org2d6d25c">1.8. 关于软件</a>
 <ul>
-<li><a href="#org00b6ff1">1.8.1. SQLite</a></li>
+<li><a href="#org737bca4">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgbf3054c">1.9. 关于workflow</a></li>
+<li><a href="#org0f7dd75">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgca5ab81">2. 棒棒视频</a>
+<li><a href="#org9d3f925">2. 棒棒视频</a>
 <ul>
-<li><a href="#org621ee05">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org43bc9c5">2.2. 各种剧</a></li>
-<li><a href="#org725e578">2.3. 电影</a></li>
+<li><a href="#org3cb8511">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org04d0407">2.2. 各种剧</a></li>
+<li><a href="#orgfe2699d">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org2ab83ca">3. 快乐游戏</a></li>
-<li><a href="#org2232ca9">4. 宝藏博主</a></li>
-<li><a href="#orgb1d47c6">5. 有意思的</a></li>
-<li><a href="#org8446d09">6. 我想玩的</a></li>
+<li><a href="#orgc3ee61b">3. 快乐游戏</a></li>
+<li><a href="#orgb214b43">4. 宝藏博主</a></li>
+<li><a href="#orgd0193cb">5. 有意思的</a></li>
+<li><a href="#org1cc387b">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -77,8 +77,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org9ec3b5e" class="outline-2">
-<h2 id="org9ec3b5e"><span class="section-number-2">1.</span> <a href="#org9ec3b5e">妙妙文章</a></h2>
+<div id="outline-container-org4a2021f" class="outline-2">
+<h2 id="org4a2021f"><span class="section-number-2">1.</span> <a href="#org4a2021f">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -437,7 +437,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="orga3f6c17">
+<figure id="org7266998">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -501,8 +501,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org8165b6e" class="outline-3">
-<h3 id="org8165b6e"><span class="section-number-3">1.1.</span> <a href="#org8165b6e">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org0ed5efb" class="outline-3">
+<h3 id="org0ed5efb"><span class="section-number-3">1.1.</span> <a href="#org0ed5efb">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -532,8 +532,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org17989dd" class="outline-3">
-<h3 id="org17989dd"><span class="section-number-3">1.2.</span> <a href="#org17989dd">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org4ff45ed" class="outline-3">
+<h3 id="org4ff45ed"><span class="section-number-3">1.2.</span> <a href="#org4ff45ed">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -567,8 +567,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org2c1ced1" class="outline-3">
-<h3 id="org2c1ced1"><span class="section-number-3">1.3.</span> <a href="#org2c1ced1">关于编辑器</a></h3>
+<div id="outline-container-orge179212" class="outline-3">
+<h3 id="orge179212"><span class="section-number-3">1.3.</span> <a href="#orge179212">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgcd4912f" class="outline-3">
-<h3 id="orgcd4912f"><span class="section-number-3">1.4.</span> <a href="#orgcd4912f">关于代码</a></h3>
+<div id="outline-container-orge163824" class="outline-3">
+<h3 id="orge163824"><span class="section-number-3">1.4.</span> <a href="#orge163824">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -611,8 +611,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-orgb0e498e" class="outline-3">
-<h3 id="orgb0e498e"><span class="section-number-3">1.5.</span> <a href="#orgb0e498e">关于CPU</a></h3>
+<div id="outline-container-org3a77039" class="outline-3">
+<h3 id="org3a77039"><span class="section-number-3">1.5.</span> <a href="#org3a77039">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -626,8 +626,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-org3d4c981" class="outline-4">
-<h4 id="org3d4c981"><span class="section-number-4">1.5.1.</span> <a href="#org3d4c981">Lisp</a></h4>
+<div id="outline-container-org0ea6579" class="outline-4">
+<h4 id="org0ea6579"><span class="section-number-4">1.5.1.</span> <a href="#org0ea6579">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -650,8 +650,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgbc8083c" class="outline-3">
-<h3 id="orgbc8083c"><span class="section-number-3">1.6.</span> <a href="#orgbc8083c">关于算法</a></h3>
+<div id="outline-container-orgeace410" class="outline-3">
+<h3 id="orgeace410"><span class="section-number-3">1.6.</span> <a href="#orgeace410">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -670,8 +670,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org085ee5f" class="outline-4">
-<h4 id="org085ee5f"><span class="section-number-4">1.6.1.</span> <a href="#org085ee5f">关于随机</a></h4>
+<div id="outline-container-org7b9e839" class="outline-4">
+<h4 id="org7b9e839"><span class="section-number-4">1.6.1.</span> <a href="#org7b9e839">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -685,8 +685,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org8038c6b" class="outline-3">
-<h3 id="org8038c6b"><span class="section-number-3">1.7.</span> <a href="#org8038c6b">关于AI</a></h3>
+<div id="outline-container-org4028f97" class="outline-3">
+<h3 id="org4028f97"><span class="section-number-3">1.7.</span> <a href="#org4028f97">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -696,8 +696,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org416ed88" class="outline-3">
-<h3 id="org416ed88"><span class="section-number-3">1.8.</span> <a href="#org416ed88">关于软件</a></h3>
+<div id="outline-container-org2d6d25c" class="outline-3">
+<h3 id="org2d6d25c"><span class="section-number-3">1.8.</span> <a href="#org2d6d25c">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -708,8 +708,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org00b6ff1" class="outline-4">
-<h4 id="org00b6ff1"><span class="section-number-4">1.8.1.</span> <a href="#org00b6ff1">SQLite</a></h4>
+<div id="outline-container-org737bca4" class="outline-4">
+<h4 id="org737bca4"><span class="section-number-4">1.8.1.</span> <a href="#org737bca4">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgbf3054c" class="outline-3">
-<h3 id="orgbf3054c"><span class="section-number-3">1.9.</span> <a href="#orgbf3054c">关于workflow</a></h3>
+<div id="outline-container-org0f7dd75" class="outline-3">
+<h3 id="org0f7dd75"><span class="section-number-3">1.9.</span> <a href="#org0f7dd75">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgca5ab81" class="outline-2">
-<h2 id="orgca5ab81"><span class="section-number-2">2.</span> <a href="#orgca5ab81">棒棒视频</a></h2>
+<div id="outline-container-org9d3f925" class="outline-2">
+<h2 id="org9d3f925"><span class="section-number-2">2.</span> <a href="#org9d3f925">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +805,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org621ee05" class="outline-3">
-<h3 id="org621ee05"><span class="section-number-3">2.1.</span> <a href="#org621ee05">Veritasium 真理元素</a></h3>
+<div id="outline-container-org3cb8511" class="outline-3">
+<h3 id="org3cb8511"><span class="section-number-3">2.1.</span> <a href="#org3cb8511">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +831,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org43bc9c5" class="outline-3">
-<h3 id="org43bc9c5"><span class="section-number-3">2.2.</span> <a href="#org43bc9c5">各种剧</a></h3>
+<div id="outline-container-org04d0407" class="outline-3">
+<h3 id="org04d0407"><span class="section-number-3">2.2.</span> <a href="#org04d0407">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org725e578" class="outline-3">
-<h3 id="org725e578"><span class="section-number-3">2.3.</span> <a href="#org725e578">电影</a></h3>
+<div id="outline-container-orgfe2699d" class="outline-3">
+<h3 id="orgfe2699d"><span class="section-number-3">2.3.</span> <a href="#orgfe2699d">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -879,8 +879,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2ab83ca" class="outline-2">
-<h2 id="org2ab83ca"><span class="section-number-2">3.</span> <a href="#org2ab83ca">快乐游戏</a></h2>
+<div id="outline-container-orgc3ee61b" class="outline-2">
+<h2 id="orgc3ee61b"><span class="section-number-2">3.</span> <a href="#orgc3ee61b">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -909,8 +909,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2232ca9" class="outline-2">
-<h2 id="org2232ca9"><span class="section-number-2">4.</span> <a href="#org2232ca9">宝藏博主</a></h2>
+<div id="outline-container-orgb214b43" class="outline-2">
+<h2 id="orgb214b43"><span class="section-number-2">4.</span> <a href="#orgb214b43">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -922,15 +922,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="orgf35cb62">
+<figure id="org89abfc9">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-orgb1d47c6" class="outline-2">
-<h2 id="orgb1d47c6"><span class="section-number-2">5.</span> <a href="#orgb1d47c6">有意思的</a></h2>
+<div id="outline-container-orgd0193cb" class="outline-2">
+<h2 id="orgd0193cb"><span class="section-number-2">5.</span> <a href="#orgd0193cb">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -957,8 +957,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org8446d09" class="outline-2">
-<h2 id="org8446d09"><span class="section-number-2">6.</span> <a href="#org8446d09">我想玩的</a></h2>
+<div id="outline-container-org1cc387b" class="outline-2">
+<h2 id="org1cc387b"><span class="section-number-2">6.</span> <a href="#org1cc387b">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -981,7 +981,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-28 16:22</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 08:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
